tests/errors/no_such_attribute.experr
type 'Integer' has no attribute 'foo'
